--- a/.github/workflows/msw.yml
+++ b/.github/workflows/msw.yml
@@ -52,7 +52,8 @@ jobs:
           if [[ $(git status --porcelain) ]]; then
             git status --porcelain
             git add public/mockServiceWorker.js
-            git commit -m "[dependabot skip] Automatically updating mockServiceWorker.js file after 'msw' update in package.json"
+            # git commit -m "[dependabot skip] Automatically updating mockServiceWorker.js file after 'msw' update in package.json"
+            git commit -m "Automatically updating mockServiceWorker.js file after 'msw' update in package.json"
             git push origin $BRANCH_NAME
           else
             echo "No changes in mockServiceWorker.js"
