--- a/.github/workflows/msw.yml
+++ b/.github/workflows/msw.yml
@@ -17,7 +17,8 @@ env:
   GIT_AUTHOR_EMAIL: ${{ github.actor }}@users.noreply.github.com
   GIT_COMMITTER_NAME: GitHub
   GIT_COMMITTER_EMAIL: actions@github.com
-  BRANCH_NAME: ${{ github.event.pull_request.head.ref }}
+  BRANCH_NAME: msw-update-${{ github.run_id }}
+  # BRANCH_NAME: ${{ github.event.pull_request.head.ref }}
 
 jobs:
   update_msw_worker:
