--- a/.github/workflows/msw.yml
+++ b/.github/workflows/msw.yml
@@ -42,10 +42,14 @@ jobs:
       - name: Regenerate mockServiceWorker.js
         if: ${{contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') }}
         run: |
+          
           echo "Current branch is: $(git rev-parse --abbrev-ref HEAD)"
-          git config pull.rebase false      
-          git pull origin $BRANCH_NAME --allow-unrelated-histories
-          git checkout $BRANCH_NAME
+          # git config pull.rebase false      
+          # git pull origin $BRANCH_NAME --allow-unrelated-histories
+          # git checkout $BRANCH_NAME
+          
+          git checkout -b $BRANCH_NAME
+          
           npx msw init public/ --save
       - name: Check for changes in mockServiceWorker.js
         if: ${{contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') }}
