--- a/.github/workflows/msw.yml
+++ b/.github/workflows/msw.yml
@@ -17,8 +17,9 @@ env:
   GIT_AUTHOR_EMAIL: ${{ github.actor }}@users.noreply.github.com
   GIT_COMMITTER_NAME: GitHub
   GIT_COMMITTER_EMAIL: actions@github.com
-  BRANCH_NAME: msw-update-${{ github.run_id }}
-  # BRANCH_NAME: ${{ github.event.pull_request.head.ref }}
+  BRANCH_NAME: ${{ github.event.pull_request.head.ref }}
+  #BRANCH_NAME: msw-update-${{ github.run_id }}
+  
 
 jobs:
   update_msw_worker:
@@ -44,11 +45,9 @@ jobs:
         run: |
           
           echo "Current branch is: $(git rev-parse --abbrev-ref HEAD)"
-          # git config pull.rebase false      
-          # git pull origin $BRANCH_NAME --allow-unrelated-histories
-          # git checkout $BRANCH_NAME
-          
-          git checkout -b $BRANCH_NAME
+          git config pull.rebase false      
+          git pull origin $BRANCH_NAME --allow-unrelated-histories
+          git checkout $BRANCH_NAME
           
           npx msw init public/ --save
       - name: Check for changes in mockServiceWorker.js
@@ -59,7 +58,7 @@ jobs:
             git add public/mockServiceWorker.js
             # git commit -m "[dependabot skip] Automatically updating mockServiceWorker.js file after 'msw' update in package.json"
             git commit -m "Automatically updating mockServiceWorker.js file after 'msw' update in package.json"
-            git push origin $BRANCH_NAME
+            git push origin $BRANCH_NAME --force
           else
             echo "No changes in mockServiceWorker.js"
           fi
