--- a/.github/workflows/msw.yml
+++ b/.github/workflows/msw.yml
@@ -19,6 +19,8 @@ env:
   GIT_COMMITTER_EMAIL: actions@github.com
   BRANCH_NAME: ${{ github.event.pull_request.head.ref }}
   #BRANCH_NAME: msw-update-${{ github.run_id }}
+  TEMP_BRANCH_NAME: msw-update-${{ github.run_id }}
+  PR_BRANCH_NAME: ${{ github.event.pull_request.head.ref }}
   
 
 jobs:
@@ -40,25 +42,50 @@ jobs:
         if: ${{contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') }}
         run: |
           npm ci
+      # - name: Regenerate mockServiceWorker.js
+      #   if: ${{contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') }}
+      #   run: |
+          
+      #     echo "Current branch is: $(git rev-parse --abbrev-ref HEAD)"
+      #     git config pull.rebase false      
+      #     git pull origin $BRANCH_NAME --allow-unrelated-histories
+      #     git checkout $BRANCH_NAME
+          
+      #     npx msw init public/ --save
+      # - name: Check for changes in mockServiceWorker.js
+      #   if: ${{contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') }}
+      #   run: |
+      #     if [[ $(git status --porcelain) ]]; then
+      #       git status --porcelain
+      #       git add public/mockServiceWorker.js
+      #       # git commit -m "[dependabot skip] Automatically updating mockServiceWorker.js file after 'msw' update in package.json"
+      #       git commit -m "Automatically updating mockServiceWorker.js file after 'msw' update in package.json"
+      #       git push origin $BRANCH_NAME --force
+      #     else
+      #       echo "No changes in mockServiceWorker.js"
+      #     fi
       - name: Regenerate mockServiceWorker.js
-        if: ${{contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') }}
+        if: ${{ contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') }}
         run: |
-          
           echo "Current branch is: $(git rev-parse --abbrev-ref HEAD)"
-          git config pull.rebase false      
-          git pull origin $BRANCH_NAME --allow-unrelated-histories
-          git checkout $BRANCH_NAME
-          
           npx msw init public/ --save
-      - name: Check for changes in mockServiceWorker.js
-        if: ${{contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') }}
+
+      - name: Create and push temporary branch
+        if: ${{ contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') }}
         run: |
-          if [[ $(git status --porcelain) ]]; then
-            git status --porcelain
-            git add public/mockServiceWorker.js
-            # git commit -m "[dependabot skip] Automatically updating mockServiceWorker.js file after 'msw' update in package.json"
-            git commit -m "Automatically updating mockServiceWorker.js file after 'msw' update in package.json"
-            git push origin $BRANCH_NAME --force
-          else
-            echo "No changes in mockServiceWorker.js"
-          fi
+          git checkout -b $TEMP_BRANCH_NAME
+          git add public/mockServiceWorker.js
+          git commit -m "[dependabot skip] Automatically updating mockServiceWorker.js file after 'msw' update in package.json"
+          git push origin $TEMP_BRANCH_NAME
+
+      - name: Merge temporary branch back into PR branch
+        if: ${{ contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') }}
+        run: |
+          git checkout $PR_BRANCH_NAME
+          git pull origin $TEMP_BRANCH_NAME
+          git push origin $PR_BRANCH_NAME
+
+      - name: Delete temporary branch
+        if: ${{ contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') }}
+        run: |
+          git push origin --delete $TEMP_BRANCH_NAME
