--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -176,6 +176,8 @@ jobs:
 
   msw:
     runs-on: ubuntu-latest
+    needs: [lint]
+    if: ${{ success() }}
     env:
       GIT_AUTHOR_NAME: ${{ github.actor }}
       GIT_AUTHOR_EMAIL: ${{ github.actor }}@users.noreply.github.com
