--- a/.github/workflows/msw.yml
+++ b/.github/workflows/msw.yml
@@ -1,16 +1,16 @@
-name: Update mockServiceWorker.js
+name: msw
 
 on:
-  workflow_run:
-    workflows: [PR]
-    types: [completed]
-    branches: [master]
-  # pull_request:
-  #   types:
-  #     # - opened
-  #     - synchronize # maybe don't need
-  #   branches:
-  #     - master
+  # workflow_run:
+  #   workflows: [PR]
+  #   types: [completed]
+  #   branches: [master]
+  pull_request:
+    types:
+      - opened
+      # - synchronize # maybe don't need
+    branches:
+      - master
 
 
 permissions:
