--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,9 +1,15 @@
 name: PR
 
+# on:
+#   pull_request:
+#     branches:
+#       - 'master'
+
 on:
-  pull_request:
-    branches:
-      - 'master'
+  workflow_run:
+    workflows: [msw]
+    types: [completed]
+    branches: [master]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number }}
