--- a/.github/workflows/msw.yml
+++ b/.github/workflows/msw.yml
@@ -4,7 +4,7 @@ on:
   workflow_run:
     workflows: [PR]
     types: [completed]
-    branches: [master]
+    branches: [master, dependabot/**]
   # pull_request:
   #   types:
   #     - opened
