--- a/.github/workflows/msw.yml
+++ b/.github/workflows/msw.yml
@@ -9,8 +9,8 @@ on:
     types:
       - opened
       # - synchronize # maybe don't need
-  #   branches:
-  #     - master
+    branches:
+      - master
 
 permissions:
   contents: write
