--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -53,10 +53,14 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          curl -X POST \
-            -H "Authorization: token $GITHUB_TOKEN" \
-            -H "Accept: application/vnd.github.v3+json" \
-            -d '{"title":"Automated PR creation","head":"MSW-1","base":"main"}' \
-            https://api.github.com/repos/${{ github.repository }}/pulls
+          gh pr create --title "My test title" --body "This PR updates the translations from OneSky" --base MSW-1
+                  
+          # curl -X POST \
+          #   -H "Authorization: token $GITHUB_TOKEN" \
+          #   -H "Accept: application/vnd.github.v3+json" \
+          #   -d '{"title":"Automated PR creation","head":"MSW-1","base":"main"}' \
+          #   https://api.github.com/repos/${{ github.repository }}/pulls
 
           #gh pr create -B base_branch -H branch_to_merge --title 'Merge branch_to_merge into base_branch' --body 'Created by Github action'
+          
+              
