--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -53,7 +53,7 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          gh pr create --title "My test title" --body "This PR updates the translations from OneSky" --base MSW-1
+          gh pr create --title "My test title" --body "This PR updates the translations from OneSky" --base main
                   
           # curl -X POST \
           #   -H "Authorization: token $GITHUB_TOKEN" \
