--- a/msw.yml
+++ b/msw.yml
@@ -2,16 +2,15 @@ name: msw
 
 on:
   # workflow_run:
-  #   workflows: [PR]
-  #   types: [completed]
-  #   branches: [master]
+    # workflows: [PR]
+    # types: [completed]
+    # branches: [master, dependabot/**]
   pull_request:
     types:
       - opened
-      - synchronize # maybe don't need
+      # - synchronize # maybe don't need
     branches:
       - master
-
 
 permissions:
   contents: write
@@ -47,11 +46,13 @@ jobs:
       - name: Regenerate mockServiceWorker.js
         if: ${{contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') }}
         run: |
-          
+        
+          git checkout -b MSW-1
+
           echo "Current branch is: $(git rev-parse --abbrev-ref HEAD)"
-          git config pull.rebase false      
-          git pull origin $BRANCH_NAME --allow-unrelated-histories
-          git checkout $BRANCH_NAME
+          # git config pull.rebase false      
+          # git pull origin $BRANCH_NAME --allow-unrelated-histories
+          # git checkout $BRANCH_NAME
           
           npx msw init public/ --save
       - name: Check for changes in mockServiceWorker.js
@@ -61,8 +62,24 @@ jobs:
             git status --porcelain
             git add public/mockServiceWorker.js
             # git commit -m "[dependabot skip] Automatically updating mockServiceWorker.js file after 'msw' update in package.json"
-            git commit -m "Automatically updating mockServiceWorker.js file after 'msw' update in package.json"
-            git push origin $BRANCH_NAME --force
+            # git commit -m "Automatically updating mockServiceWorker.js file after 'msw' update in package.json"
+            # git push origin $BRANCH_NAME --force
           else
             echo "No changes in mockServiceWorker.js"
           fi
+
+      - name: Push new branch
+        run: |
+          git push origin MSW-1 --force
+
+      - name: Create new pull request
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          curl -X POST \
+            -H "Authorization: token $GITHUB_TOKEN" \
+            -H "Accept: application/vnd.github.v3+json" \
+            -d '{"title":"Automated PR creation","head":"MSW-1","base":"main"}' \
+            https://api.github.com/repos/${{ github.repository }}/pulls
+          # gh pr create -B base_branch -H branch_to_merge --title 'Merge branch_to_merge into base_branch' --body 'Created by Github action'
