--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -65,6 +65,7 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          gh pr create -B MSW-1 -H master --title 'Merge branch_to_merge into base_branch' --body 'Created by Github action'
           gh pr create --title "My test title" --body "This PR updates the translations from OneSky" --head MSW-1 --base master
                   
           # curl -X POST \
