--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -38,7 +38,7 @@ jobs:
 
       - name: Regenerate mockServiceWorker.js
         run: |
-          git remote set-url origin https://${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }}
+          # git remote set-url origin https://${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }}
           
           if git ls-remote --exit-code --heads origin MSW-1; then
             git fetch origin MSW-1
@@ -66,25 +66,12 @@ jobs:
 
       - name: Push new branch
         run: |
-          git fetch origin MSW-1 || true  # Ignore if the branch doesn't exist
+          git fetch origin MSW-1 || true
           git push --force-with-lease origin MSW-1
-          
-          #git push origin MSW-1 || git push --set-upstream origin MSW-1
 
       - name: Create new pull request
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          gh pr create --base master --head MSW-1 --title 'Merge branch_to_merge into base_branch' --body 'Created by Github action'
-          # gh pr create --title "My test title" --body "This PR updates the translations from OneSky" --head MSW-1 --base master
-          ###        
-          # curl -X POST \
-          #   -H "Authorization: token $GITHUB_TOKEN" \
-          #   -H "Accept: application/vnd.github.v3+json" \
-          #   -d '{"title":"Automated PR creation","head":"MSW-1","base":"main"}' \
-          #   https://api.github.com/repos/${{ github.repository }}/pulls
-
-          #gh pr create -B base_branch -H branch_to_merge --title 'Merge branch_to_merge into base_branch' --body 'Created by Github action'
-          
-              
+          gh pr create --base master --head MSW-1 --title 'MSW update' --body 'Created via CI/CD'
