--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -3,9 +3,10 @@ name: create
 on:
   workflow_dispatch:
 
-permissions: write-all
-  # contents: write
-  # pull-requests: write
+# permissions: write-all
+permissions:
+  contents: write
+  pull-requests: write
 
 env:
   GIT_AUTHOR_NAME: ${{ github.actor }}
