--- a/.github/workflows/msw.yml
+++ b/.github/workflows/msw.yml
@@ -27,7 +27,7 @@ env:
 jobs:
   update_msw_worker:
     runs-on: ubuntu-latest
-
+    if: ${{ github.actor == 'dependabot[bot]' }}
     steps:
       - name: Dependabot metadata
         id: dependabot-metadata
@@ -49,6 +49,8 @@ jobs:
         
           git checkout -b MSW-1
 
+          DEPENDABOT_COMMIT_HASH=$(git rev-parse github.event.pull_request.head.ref)
+
           echo "Current branch is: $(git rev-parse --abbrev-ref HEAD)"
           # git config pull.rebase false      
           # git pull origin $BRANCH_NAME --allow-unrelated-histories
@@ -61,25 +63,23 @@ jobs:
           if [[ $(git status --porcelain) ]]; then
             git status --porcelain
             git add public/mockServiceWorker.js
+            
             # git commit -m "[dependabot skip] Automatically updating mockServiceWorker.js file after 'msw' update in package.json"
             # git commit -m "Automatically updating mockServiceWorker.js file after 'msw' update in package.json"
             # git push origin $BRANCH_NAME --force
+
           else
             echo "No changes in mockServiceWorker.js"
           fi
 
       - name: Push new branch
         run: |
-          git push origin MSW-1 --force
+          git fetch origin MSW-1 || true
+          git push --force-with-lease origin MSW-1
 
       - name: Create new pull request
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          curl -X POST \
-            -H "Authorization: token $GITHUB_TOKEN" \
-            -H "Accept: application/vnd.github.v3+json" \
-            -d '{"title":"Automated PR creation","head":"MSW-1","base":"main"}' \
-            https://api.github.com/repos/${{ github.repository }}/pulls
-          # gh pr create -B base_branch -H branch_to_merge --title 'Merge branch_to_merge into base_branch' --body 'Created by Github action'
+          gh pr create --base master --head MSW-1 --title 'MSW update' --body 'Created via CI/CD'
