--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -68,7 +68,7 @@ jobs:
 
       - name: Push new branch
         run: |
-          git fetch origin MSW-1 || true
+          # git fetch origin MSW-1 || true
           git push --force-with-lease origin MSW-1
 
       - name: Create new pull request
