--- a/.github/workflows/msw.yml
+++ b/.github/workflows/msw.yml
@@ -66,7 +66,7 @@ jobs:
         if: ${{contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') }}
         run: |
           git config pull.rebase false
-          git pull origin master
+          git pull origin master --allow-unrelated-histories
           git checkout master
           git checkout -b MSW-1
 
