--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -4,10 +4,13 @@ on:
   pull_request:
     branches:
       - 'master'
+    branches-ignore:
+      - 'dependabot/**msw**'
 
   workflow_run:
     workflows: [msw]
     types: [completed]
+    branches: [master]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number }}
