--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -19,7 +19,6 @@ env:
 jobs:
   update_msw_worker:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
       - name: Set up node
@@ -78,3 +77,6 @@ jobs:
         run: |
           gh pr create --base master --head MSW-1 --title 'MSW update' --body 'Created via CI/CD'
           #
+
+  pr:
+    uses: ./.github/workflows/pr.yml@main
