--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -79,9 +79,7 @@ jobs:
           #
 
   pr:
-    name: pull request check
-    runs-on: ubuntu-latest
     needs: update_msw_worker
-    steps:
-      - name: Start
-        uses: ./.github/workflows/pr.yml@master
+    uses: ./.github/workflows/pr.yml
+    with:
+      pr_branch: MSW-1
