--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -4,6 +4,11 @@ on:
   pull_request:
     branches:
       - 'master'
+  workflow_call:
+    inputs:
+      pr_branch:
+        required: true
+        type: string
 
   # workflow_run:
   #   workflows: [msw]
