--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -81,6 +81,6 @@ jobs:
   pr:
     needs: update_msw_worker
     #uses: ./.github/workflows/pr.yml
-    uses: ./.github/actions/pr
+    uses: ./.github/actions/pr@master
     with:
       pr_branch: MSW-1
