--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -21,6 +21,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - name: Set up node
         uses: actions/setup-node@v4
         with:
@@ -77,10 +79,3 @@ jobs:
         run: |
           gh pr create --base master --head MSW-1 --title 'MSW update' --body 'Created via CI/CD'
           #
-
-  pr:
-    needs: update_msw_worker
-    #uses: ./.github/workflows/pr.yml
-    uses: ./.github/actions/pr@master
-    with:
-      pr_branch: MSW-1
