--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -4,6 +4,7 @@ on:
   pull_request:
     branches:
       - 'master'
+      - 'dependabot/**msw**'
   # workflow_call:
   #   inputs:
   #     pr_branch:
