--- a/.github/workflows/msw.yml
+++ b/.github/workflows/msw.yml
@@ -82,6 +82,7 @@ jobs:
           CURRENT_TITLE=$(gh pr view "$PR_NUMBER" --json title -q '.title')
           NEW_TITLE="DEV_UPDATE: $CURRENT_TITLE"
           gh pr edit "$PR_NUMBER" --title "$NEW_TITLE"
+          gh workflow run pr.yml --ref ${{ github.event.pull_request.head.ref }}
 
 
 
