--- a/.github/workflows/msw.yml
+++ b/.github/workflows/msw.yml
@@ -44,26 +44,26 @@ jobs:
           echo $PAT_TOKEN | gh auth login --with-token
 
       - name: Set up node
-        if: ${{contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') && !contains(github.event.pull_request.title, 'DEV_UPDATE')}}
+        if: ${{contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') && !contains(github.event.pull_request.title, 'MSW_UPDATE')}}
         uses: actions/setup-node@v4
         with:
           node-version-file: '.nvmrc'
           cache: 'npm'
       - name: Install node_modules
-        if: ${{contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') && !contains(github.event.pull_request.title, 'DEV_UPDATE')}}
+        if: ${{contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') && !contains(github.event.pull_request.title, 'MSW_UPDATE')}}
         run: |
           npm ci
 
 
       - name: Regenerate mockServiceWorker.js
-        if: ${{ contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') && !contains(github.event.pull_request.title, 'DEV_UPDATE')}}
+        if: ${{ contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') && !contains(github.event.pull_request.title, 'MSW_UPDATE')}}
         run: |
           git config pull.rebase false
           git pull origin ${{ github.event.pull_request.head.ref }} --allow-unrelated-histories
           git checkout ${{ github.event.pull_request.head.ref }}
           npx msw init public/ --save
       - name: Check for changes in mockServiceWorker.js
-        if: ${{ contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') && !contains(github.event.pull_request.title, 'DEV_UPDATE')}}
+        if: ${{ contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') && !contains(github.event.pull_request.title, 'MSW_UPDATE')}}
         run: |
           if [[ $(git status --porcelain) ]]; then
             git status --porcelain
@@ -74,15 +74,14 @@ jobs:
             echo "No changes in mockServiceWorker.js"
           fi
       - name: Change title of PR
-        if: ${{ contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') && !contains(github.event.pull_request.title, 'DEV_UPDATE')}}
+        if: ${{ contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') && !contains(github.event.pull_request.title, 'MSW_UPDATE')}}
         env:
           GH_TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
           PR_NUMBER=$(gh pr list --head "dependabot/npm_and_yarn/msw-2.6.5" --json number -q '.[0].number')
           CURRENT_TITLE=$(gh pr view "$PR_NUMBER" --json title -q '.title')
-          NEW_TITLE="DEV_UPDATE: $CURRENT_TITLE"
+          NEW_TITLE="MSW_UPDATE: $CURRENT_TITLE"
           gh pr edit "$PR_NUMBER" --title "$NEW_TITLE"
-          gh workflow run pr.yml --ref ${{ github.event.pull_request.head.ref }}
 
 
 
